@@ -2,6 +2,11 @@ Revision history for Perl extension Fl
 
 {{$NEXT}}
 
+    - FLTK.pm now has a $VERSION
+    - Fl_Label types exported with :label tag
+    - FL_MAJOR_VERSION, FL_MINOR_VERSION, FL_PATCH_VERSION, FL_VERSION exported with :version tag
+    - Fl_Boxtype types exported with :box tag
+
 0.99.00 2016-04-26T04:55:11Z
 
     - First release. Resume project with stable 1.3.3 branch of FLTK
